syntax = "proto3";
package grpcnative;
option java_package = "sb.rpc.grpc3";
option java_outer_classname = "OrderServiceProto3";
option java_multiple_files = true;

// The greeting service definition.
service OrderService3 {
    // Sends a greeting
    rpc getOrderDetail (OrderRequest3) returns (OrderDetail3) {}
}

message OrderRequest3 {
    string orderId = 1;
}

message OrderDetail3 {
    string name = 1;
    uint64 date = 2;
    double price = 3;
    string buyer = 4;
    string seller = 5;
}